add .widgets class

--- a/app/templates/widgets.hbs
+++ b/app/templates/widgets.hbs
@@ -1,6 +1,8 @@
-<h2>Widgets</h2>
+<span class=".widgets">
+  <h2>Widgets</h2>
 
-{{#each widget in controller}}
-  {{render widget widget}}
-  <br>
-{{/each}}
+  {{#each widget in controller}}
+    {{render widget widget}}
+    <br>
+  {{/each}}
+</span>
